package com.example.composeplayground


const val TEST_TAG_EMPTY_LIST = "TEST_TAG_EMPTY_LIST"
const val TEST_TAG_FILL_BUTTON = "TEST_TAG_FILL_BUTTON"
const val TEST_TAG_CLEAN_BUTTON = "TEST_TAG_CLEAN_BUTTON"
